--- a/routine/package.json
+++ b/routine/package.json
@@ -7,5 +7,8 @@
         "ethereumjs-tx": "^2.1.2",
         "nodemailer": "^6.4.6",
         "web3-utils": "^1.2.6"
+    },
+    "devDependencies": {
+        "serverless": "^1.68.0"
     }
 }
